--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,8 @@
-@import "https://fonts.googleapis.com/css?family=Ubuntu:300,400,500";
+@font-face {
+	font-family: 'Ubuntu';
+	src: url('../assets/fonts/ubuntu-regular.woff2') format('woff2'),
+	url('../assets/fonts/ubuntu-regular.woff') format('woff');
+}
 
 html {
 	font-family: sans-serif;
